# embedded-engine

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  connect.py  flash.sh  minicom.sh  todo.md
lcd/: .cproject  .mxproject  STM32L152RCTX_FLASH.ld  lcd Debug.launch  lcd.ioc
lcd/Core/Inc/: main.h  stm32l1xx_hal_conf.h  stm32l1xx_it.h
lcd/Core/Src/: main.c  stm32l1xx_hal_msp.c  stm32l1xx_it.c
lcd/Debug/: lcd.elf  lcd.list  lcd.map  makefile  objects.list  sources.mk
lcd/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32l1xx_hal_msp.cyclo  stm32l1xx_hal_msp.d  stm32l1xx_hal_msp.su  stm32l1xx_it.cyclo  stm32l1xx_it.d  stm32l1xx_it.su  subdir.mk  system_stm32l1xx.d
lcd/Debug/Core/Startup/: subdir.mk
lcd/Debug/Drivers/STM32L1xx_HAL_Driver/Src/: stm32l1xx_hal.d  stm32l1xx_hal_cortex.d  stm32l1xx_hal_dma.d  stm32l1xx_hal_exti.d  stm32l1xx_hal_flash.d  stm32l1xx_hal_flash_ex.d  stm32l1xx_hal_flash_ramfunc.d  stm32l1xx_hal_gpio.d  stm32l1xx_hal_pwr.d  stm32l1xx_hal_pwr_ex.d  stm32l1xx_hal_rcc.d  stm32l1xx_hal_rcc_ex.d  stm32l1xx_hal_tim.d  (+2 more)
led_2/: .cproject  .mxproject  .project  led_2 Debug.launch  led_2.ioc
led_2/Debug/: led_2.elf  led_2.list  led_2.map  makefile
led_panel/: .clangd  .cproject  .mxproject  .project  CMakeLists.txt  build.sh  cubeide-gcc.cmake  flash.sh  led_panel Debug (1).launch  led_panel Debug.launch  led_panel.ioc
led_panel/.cache/clangd/index/: cmsis_compiler.h.B7C81CB1A9BC31AD.idx  cmsis_gcc.h.60A081C8AFADCC85.idx  cmsis_version.h.62B39D9AF600F7F5.idx  cube3d.c.5F7D99117F80A7AD.idx  display_string.c.1B81F4C74708E7D9.idx  display_test.c.6815B529BD6240D7.idx  event.c.3365BA95153827B3.idx  event.h.660F60EC50259ADE.idx  game0.c.7D9E10DF517C3461.idx  game_of_life.c.821D350A361F1D00.idx  main.c.D64699D40383F4CC.idx  main.h.ABC402ED12C24A3E.idx  mat.c.E8E2E90096BF5E25.idx  mat.h.C4A6FB589A0BBB49.idx  renderer.c.35A7742BBFCC4CA1.idx  renderer.h.0BCFFEF167DE3AB1.idx  rule110.c.D6A6DB36B45490FC.idx  startup_stm32f103r8tx.s.EAEB85DD20DB9F2B.idx  stm32_hal_legacy.h.4A55987B678E3ABF.idx  stm32f103xb.h.84E9408D0B2025F4.idx  stm32f1xx.h.FB026C1C5840016F.idx  stm32f1xx_hal.c.ADEA8757D4CB93EA.idx  stm32f1xx_hal.h.49D6B52724F0B128.idx  stm32f1xx_hal_cortex.c.9AA763BEBDC739A2.idx  stm32f1xx_hal_cortex.h.9B80D0D2CE15AD2F.idx  stm32f1xx_hal_dma.c.05089322447AEEAB.idx  stm32f1xx_hal_dma.h.A28909C7F6811E6E.idx  stm32f1xx_hal_exti.c.5A6A9D90FF9C9618.idx  stm32f1xx_hal_exti.h.2B8ABC59F831FB43.idx  stm32f1xx_hal_flash.c.E83CBDB312FD6D31.idx  stm32f1xx_hal_flash.h.2A1372A880025D72.idx  stm32f1xx_hal_flash_ex.c.84DE32F751F1BB84.idx  stm32f1xx_hal_gpio.c.6A03F5E460F2D4C6.idx  stm32f1xx_hal_gpio_ex.c.15286575BF77701B.idx  stm32f1xx_hal_gpio_ex.h.7986B1819FE4ACA6.idx  stm32f1xx_hal_msp.c.E1CCDD643EB31032.idx  stm32f1xx_hal_pwr.c.ABA0C28198FF5131.idx  stm32f1xx_hal_rcc.c.612A178ED4062479.idx  stm32f1xx_hal_rcc_ex.c.BBB796A1D50DFF6D.idx  stm32f1xx_hal_rcc_ex.h.E355DD309AE1EA6E.idx  (+12 more)
led_panel/Core/Inc/: base.h  base.hpp  event.h  main.h  mat.h  renderer.h
led_panel/Core/Src/: cpptest.cpp  cube3d.c  display_string.c  display_test.c  event.c  game0.c  game_of_life.c  main.c  mat.c  renderer.c  rule110.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.cpp
led_panel/Core/src/: app_3d.cpp  application.hpp  engine.hpp  event.hpp  math.cpp  math.hpp  platform_stm.cpp  renderer.hpp
led_panel/Debug/: CMakeCache.txt  led_panel.elf  led_panel.list  led_panel.map  makefile  objects.list
led_panel/Debug/Core/Src/: cube3d.cyclo  cube3d.d  cube3d.su  display_string.cyclo  display_string.su  display_test.d  event.cyclo  event.d  event.su  game0.cyclo  game0.d  game0.su  game_of_life.cyclo  game_of_life.d  game_of_life.su  main.cyclo  main.d  main.su  mat.cyclo  mat.d  mat.su  renderer.cyclo  renderer.d  renderer.su  rule110.cyclo  rule110.d  rule110.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.su  stm32f1xx_it.d  subdir.mk  testing.d
led_panel/Debug/Core/Startup/: subdir.mk
led_panel/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_cortex.cyclo  stm32f1xx_hal_cortex.su  subdir.mk
led_panel/Drivers/CMSIS/Device/ST/STM32F1xx/Include/: stm32f1xx.h
led_panel/Drivers/CMSIS/Include/: core_cm3.h
led_panel/Release/: led_panel.elf  led_panel.list  led_panel.map  makefile  objects.list  sources.mk
led_panel/Release/Core/Src/: cube3d.cyclo  cube3d.d  cube3d.su  display_string.d  event.cyclo  event.d  event.su  main.cyclo  main.d  main.su  mat.su  renderer.cyclo  renderer.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.d  stm32f1xx_hal_msp.su  stm32f1xx_it.cyclo  stm32f1xx_it.su  subdir.mk
led_panel/Release/Core/Startup/: subdir.mk
led_panel/Release/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_tim.cyclo  stm32f1xx_hal_tim.su  stm32f1xx_hal_tim_ex.cyclo  subdir.mk
small/: .cproject  .project  small Debug.launch  small.ioc
small/Core/Src/: main.c
small/Debug/: makefile  small.elf  small.list  small.map
small/Debug/Core/Src/: main.cyclo  main.su
src/: obj_to_cpp.py  torus.cpp
src/app/: cube.cpp  cube.hpp  dino.cpp  dino.hpp  display_string.cpp  display_string.hpp  doom.cpp  doom.hpp  game_of_life.cpp  game_of_life.hpp  model.hpp  rule110.cpp  rule110.hpp  sand_sim.cpp  sand_sim.hpp  showcase.cpp  tetris.cpp  tetris.hpp
src/app/old_Src/: cpptest.cpp  cube3d.c  display_string.c  game_of_life.c  testing.c
src/engine/: application.cpp  application.hpp  base.hpp  camera.cpp  camera.hpp  color.hpp  engine.cpp  engine.hpp  entry_point.cpp  event.cpp  event.hpp  math.cpp  math.hpp  mesh.hpp  platform.hpp  renderer.cpp  renderer.hpp  vector.cpp  vector.hpp
src/platform/sim/: CMakeLists.txt  platform_sim.cpp
src/platform/stm/: CMakeLists.txt  STM32F103R8TX_FLASH.ld  base_stm.hpp  cubeide-gcc.cmake  platform_stm.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.cpp  stm32f1xx_it.h
src/platform/stm/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal.h
stlink/: .cproject  .mxproject  .project  stlink Debug.launch  stlink.ioc
stlink/Core/Src/: main.c
stlink/Debug/: makefile  stlink.elf  stlink.list  stlink.map
stlink/Debug/Core/Src/: main.cyclo  main.su
